[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "pbdl-dataset"
version = "1.0.0"
description = "Manage datasets for physics-based deep learning"
readme = "README.md"
license = { file = "LICENSE" }
dependencies = [
    "torch >= 2.0.0",
    "numpy >= 1.0.0",
]
requires-python = ">=3.9"

[project.urls]
Homepage = "https://github.com/pfistse/pbdl-dataset"

[tool.setuptools.package-data]
"pbdldataset" = ["config.json"]